# frankr

./: .gitignore  INSTALL.md  LICENSE  README.md
.devcontainer/: devcontainer.json
docker/: Dockerfile
examples/: gripper.py  home.py  move_down.py  move_home.py  move_relative_cartesian.py
frankr/: CMakeLists.txt  package.xml
frankr/include/: geometry.hpp  gripper.hpp  motion.hpp  robot.hpp  waypoint.hpp
frankr/src/: gripper.cpp  python.cpp  robot.cpp
